View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030450 | Open CASCADE | OCCT:Visualization | public | 2019-01-21 11:59 | 2019-03-07 12:14 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.2.0 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0030450: Visualization - AIS_InteractiveContext::MoveTo() never uses V3d_View::ImmediateRedraw() | ||||
Description | Since Local Context removal, AIS_InteractiveContext::MoveTo() never calls V3d_View::ImmediateRedraw() and instead performs full Redraw(). This is incorrect, since the logic is actually expects Immediate Redraw being called. This is less critical for applications (update flag of AIS_InteractiveContext::MoveTo() method is NOT recommended to be used), but makes impossible a proper testing of immediate updates within Draw Harness. | ||||
Steps To Reproduce | pload VISUALIZATION vclear vinit View1 vtrihedron t vfit vzbufftrihedron vselmode t 1 1 Move mouse to the trihedron origin: BUG: origin is highlighted although it should not due to the bug within AIS_Trihedron::HilightOwnerWithColor() method. Or: > test bugs vis bug24396 1 | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR30450 has been created by kgv. SHA-1: 7cf35e905985ff7cd977c055749494f1f9ad7d44 Detailed log of new commits: Author: kgv Date: Mon Jan 21 11:57:22 2019 +0300 0030450: Visualization - AIS_InteractiveContext::MoveTo() never uses V3d_View::ImmediateRedraw() |
|
Patch is ready for review. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR30450-master-KGV/ |
|
Branch CR30450 has been updated forcibly by kgv. SHA-1: a74438e255a526eeee48ccc15fa3fa2278634c35 |
|
Branch CR30450 reviewed without remarks. |
|
Combination - OCCT branch : CR30450 SHA - a74438e255a526eeee48ccc15fa3fa2278634c35 Products branch : master SHA - 0b9df64a156abd5cbfbfccb15967b46cdabfe1f8 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16383.859999999964 / 16360.560000000005 [+0.14%] Products Total CPU difference: 7150.590000000038 / 7164.9300000000385 [-0.20%] Windows-64-VC14: OCCT Total CPU difference: 17792.203125 / 17757.890625 [+0.19%] Products Total CPU difference: 8605.375 / 8601.296875 [+0.05%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR30450 has been deleted by kgv. SHA-1: a74438e255a526eeee48ccc15fa3fa2278634c35 |
occt: master c29c0ad0 2019-01-21 08:57:22 Committer: bugmaster Details Diff |
0030450: Visualization - AIS_InteractiveContext::MoveTo() never uses V3d_View::ImmediateRedraw() AIS_InteractiveContext::MoveTo() now calls V3d_View::ImmediateRedraw() when applicable. AIS_Trihedron::HilightOwnerWithColor() - added missing ZLayer setup. |
Affected Issues 0030450 |
|
mod - src/AIS/AIS_InteractiveContext_1.cxx | Diff File | ||
mod - src/AIS/AIS_Trihedron.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-01-21 11:59 | kgv | New Issue | |
2019-01-21 11:59 | kgv | Assigned To | => kgv |
2019-01-21 12:02 | git | Note Added: 0081833 | |
2019-01-21 12:03 | kgv | Description Updated | |
2019-01-21 13:05 | kgv | Note Added: 0081841 | |
2019-01-21 13:05 | kgv | Assigned To | kgv => san |
2019-01-21 13:05 | kgv | Status | new => resolved |
2019-01-21 13:06 | kgv | Relationship added | child of 0025467 |
2019-01-21 15:43 | git | Note Added: 0081846 | |
2019-01-21 15:45 | kgv | Relationship added | related to 0027958 |
2019-01-21 15:45 | kgv | Product Version | 7.3.0 => 7.2.0 |
2019-01-21 15:47 | kgv | Steps to Reproduce Updated | |
2019-01-31 14:22 |
|
Note Added: 0081960 | |
2019-01-31 14:22 |
|
Assigned To | san => bugmaster |
2019-01-31 14:22 |
|
Status | resolved => reviewed |
2019-01-31 16:00 | bugmaster | Test case number | => Not needed |
2019-01-31 16:04 | bugmaster | Note Added: 0081969 | |
2019-01-31 16:04 | bugmaster | Status | reviewed => tested |
2019-02-03 11:25 | bugmaster | Changeset attached | => occt master c29c0ad0 |
2019-02-03 11:25 | bugmaster | Status | tested => verified |
2019-02-03 11:25 | bugmaster | Resolution | open => fixed |
2019-02-04 12:29 | git | Note Added: 0082006 | |
2019-02-26 13:57 | kgv | Relationship added | related to 0030523 |
2019-03-07 12:14 | kgv | Relationship replaced | parent of 0030523 |