0030450: Visualization - AIS_InteractiveContext::MoveTo() never uses V3d_View::ImmediateRedraw()

AIS_InteractiveContext::MoveTo() now calls V3d_View::ImmediateRedraw() when applicable.
AIS_Trihedron::HilightOwnerWithColor() - added missing ZLayer setup.